Add user favorite deck to the mongoose schema
